--- a/mentbotapp/src/app/patients/addappointment/addappointment.component.html
+++ b/mentbotapp/src/app/patients/addappointment/addappointment.component.html
@@ -76,7 +76,7 @@
                 </div>
               </div>
 
-              <!-- <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Add Booking</button> -->
+               <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Add Booking</button> -->
               
             <!-- <div class="form-group row">
               <label class="col-md-3 col-form-label" for="select2">Select Large</label>
@@ -129,8 +129,8 @@
               </div>
             </div> -->
             <div class="form-group row">
-              <label class="col-md-3 col-form-label" >Slots Available</label>
-              <!-- <div class="col-md-9 col-form-label">
+              <label class="col-md-3 col-form-label" >Get Available Slots</label>
+               <div class="col-md-9 col-form-label">
                 <div class="form-check">
                   <input class="form-check-input" type="radio" name="radios" id="radio1" value="option1" checked>
                   <label class="form-check-label" for="radio1">
@@ -149,7 +149,7 @@
                     Option 3
                   </label>
                 </div>
-              </div>-->
+              </div>
             </div> 
             <!-- <div class="form-group row">
               <label class="col-md-3 col-form-label" for="inline-radios">Inline Radios</label>
@@ -223,7 +223,7 @@
           </form>
         </div>
         <div class="card-footer">
-          <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Confirm Booking</button>
+          <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Add Appointment</button>
           <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Cancel</button>
         </div>
       </div>
