--- a/mentbotapp/src/app/patients/chatbot/chatbot.component.html
+++ b/mentbotapp/src/app/patients/chatbot/chatbot.component.html
@@ -7,7 +7,7 @@
                         <h4 class="card-title"><strong>Chat</strong></h4> <a class="btn btn-xs btn-secondary" href="#"
                             data-abc="true"></a>
                     </div>
-                    <div class="ps-container ps-theme-default ps-active-y" id="chat-content"
+                    <div 
                         style="overflow-y: scroll !important; height:400px !important;">
                         <div *ngFor="let item of messageArray">
                             <div class="media media-chat"  *ngIf="item.name === 'bot'"> <img class="avatar"
@@ -35,8 +35,8 @@
                         <img class="avatar avatar-xs"
                             src="https://img.icons8.com/color/36/000000/administrator-male.png" alt="...">
 
-                            <input class="publisher-input" type="text" #message class="form-control" name="name" >
-                            <a class="publisher-btn text-info" type="button" (click)="sendMessage(message.value)">
+                            <input class="publisher-input" type="text" [(ngModel)]="message" class="form-control" name="name" >
+                            <a class="publisher-btn text-info" type="button" (click)="sendMessage()">
                                 <i class="fa fa-paper-plane"></i>
                             </a>
                     </div>
