--- a/mentbotapp/src/app/doctors/availabilitycheck/availabilitycheck.component.html
+++ b/mentbotapp/src/app/doctors/availabilitycheck/availabilitycheck.component.html
@@ -69,15 +69,9 @@
                   </select> -->
         
 
-<timepicker [(ngModel)]="time" [showMeridian]="false"></timepicker>
-<pre class="alert alert-info">Time is: {{time}}</pre>
                  
                 </td>
-                <td><select class="form-control" style="width: auto" name="endtime">
-                    <option value="15">15 days</option>
-                    <option value="30">30 days</option>
-                    <!-- <option [ngValue]="60">60 days</option> -->
-                  </select></td>
+                <td><ngb-timepicker [(ngModel)]="time"></ngb-timepicker></td>
                 <td>
                   <span> <td>
                     <span><button type="Accept" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Add Schedule</button>
