--- a/mentbotapp/src/app/doctors/doctors-dashboard/doctors-dashboard.component.html
+++ b/mentbotapp/src/app/doctors/doctors-dashboard/doctors-dashboard.component.html
@@ -12,7 +12,8 @@
               <tr>
                 <th>Patient name</th>
                 <th>Date</th>
-                <th>Slot</th>
+                <th>Start Time</th>
+                <th>End Time</th>
                 <th>Action</th>
               </tr>
             </thead>
@@ -20,6 +21,7 @@
               <tr>
                 <td>x</td>
                 <td>y</td>
+                <td>z</td>
                 <td>z</td>
                 <td>
                   <span> <td>
