--- a/mentbotapp/src/app/home/home.component.html
+++ b/mentbotapp/src/app/home/home.component.html
@@ -47,6 +47,6 @@
   
 </div>
 <app-footer>
-  <span><a href="https://coreui.io">Mentbot</a> &copy; 2022.</span>
+  <span>Mentbot &copy; 2022.</span>
   <!-- <span class="ml-auto">Powered by <a href="https://coreui.io/angular">CoreUI for Angular</a></span> -->
 </app-footer>
