--- a/mentbotapp/src/app/patients/chatbot/chatbot.component.html
+++ b/mentbotapp/src/app/patients/chatbot/chatbot.component.html
@@ -10,15 +10,14 @@
                     <div
                         style="overflow-y: scroll !important; height:400px !important;">
                         <div *ngFor="let item of messageArray">
-                            <div class="media media-chat"  *ngIf="item.name === 'bot'"> <img class="avatar"
-                                    src="https://img.icons8.com/color/36/000000/administrator-male.png">
+                            <div class="row media w-75" *ngIf="item.name === 'you'">
                                 <div class="media-body">
-                                    <p><span>{{item.name}} </span> {{item.message}}</p>
+                                    <p><span>You :</span>{{item.message}}</p>
                                 </div>
                             </div>
-                            <div class="media media-chat media-chat-reverse" *ngIf="item.name === 'you'">
-                                <div class="media-body">
-                                    <p><span>{{item.name}} </span>{{item.message}}</p>
+                            <div class="row media w-75"  *ngIf="item.name === 'bot'" style="float: right;">
+                                <div class="media-body" style="background-color:cadetblue;">
+                                    <p><span>Bot :</span> {{item.message}}</p>
                                 </div>
                             </div>
                         </div>
