--- a/mentbotapp/src/app/patients/chatbot/chatbot.component.scss
+++ b/mentbotapp/src/app/patients/chatbot/chatbot.component.scss
@@ -20,8 +20,6 @@
     padding: rem !important;
     float: right;
      position: relative;
-   
-    
 }
 
 body {
@@ -47,6 +45,24 @@ body {
     border-bottom: 1px solid rgba(77, 82, 89, 0.07);
     // float: right;
     // position: absolute;
+}
+
+.media {
+    padding: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.media-body{
+    border-radius: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.03);
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.03);
+    -webkit-transition: .5s;
+    transition: .5s;
+    color: #fff;
+    background-color: #48b0f7;
 }
 
 .card-header .card-title {
@@ -106,19 +122,6 @@ h4.card-title {
      position: relative;
 }
 
-.media-chat {
-    padding-right: 64px;
-    margin-bottom: 0;
-    float: right;
-    
-}
-
-.media {
-    padding: 16px 12px;
-    -webkit-transition: background-color .2s linear;
-    transition: background-color .2s linear
-}
-
 .media .avatar {
     flex-shrink: 0
 }
@@ -134,113 +137,6 @@ h4.card-title {
     background-color: #f5f6f7;
     color: #8b95a5;
     text-transform: uppercase
-}
-
-.media-chat .media-body {
-    -webkit-box-flex: initial;
-    flex: initial;
-    display: table
-}
-
-.media-body {
-    min-width: 0
-}
-
-.media-chat .media-body p {
-    position: relative;
-    padding: 6px 8px;
-    margin: 4px 0;
-    background-color: #f5f6f7;
-    border-radius: 3px;
-    font-weight: 100;
-    color: #9b9b9b
-}
-
-.media>* {
-    margin: 0 8px
-}
-
-.media-chat .media-body p.meta {
-    background-color: transparent !important;
-    padding: 0;
-    opacity: .8
-}
-
-.media-meta-day {
-    -webkit-box-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: center;
-    align-items: center;
-    margin-bottom: 0;
-    color: #8b95a5;
-    opacity: .8;
-    font-weight: 400
-}
-
-.media {
-    padding: 16px 12px;
-    -webkit-transition: background-color .2s linear;
-    transition: background-color .2s linear
-}
-
-.media-meta-day::before {
-    margin-right: 16px
-}
-
-.media-meta-day::before,
-.media-meta-day::after {
-    content: '';
-    -webkit-box-flex: 1;
-    flex: 1 1;
-    border-top: 1px solid #ebebeb
-}
-
-.media-meta-day::after {
-    content: '';
-    -webkit-box-flex: 1;
-    flex: 1 1;
-    border-top: 1px solid #ebebeb
-}
-
-.media-meta-day::after {
-    margin-left: 16px
-}
-
-.media-chat.media-chat-reverse {
-    padding-right: 12px;
-    padding-left: 64px;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-    flex-direction: row-reverse
-}
-
-.media-chat {
-    padding-right: 64px;
-    margin-bottom: 0;
-    float: right;
-    // position: relative;
-}
-
-.media {
-    padding: 16px 12px;
-    -webkit-transition: background-color .2s linear;
-    transition: background-color .2s linear
-}
-
-.media-chat.media-chat-reverse .media-body p {
-    float: right;
-    clear: right;
-    background-color: #48b0f7;
-    color: #fff
-}
-
-.media-chat .media-body p {
-    position: relative;
-    padding: 6px 8px;
-    margin: 4px 0;
-    background-color: #f5f6f7;
-    border-radius: 3px
-   
 }
 
 .border-light {
