changes till now

--- a/mentbotapp/src/app/doctors/addspeciality/addspeciality.component.html
+++ b/mentbotapp/src/app/doctors/addspeciality/addspeciality.component.html
@@ -79,9 +79,9 @@
               <div class="col-md-9">
                 <select id="select3" name="select3" class="form-control form-control-sm">
                   <option value="0">Please select</option>
-                  <option value="1">Option #1</option>
-                  <option value="2">Option #2</option>
-                  <option value="3">Option #3</option>
+                  <option value="1">Anxiety</option>
+                  <option value="2">Depression #2</option>
+                  <option value="3">Stress</option>
                 </select>
               </div>
             </div>
