--- a/mentbotapp/src/app/login/login.component.html
+++ b/mentbotapp/src/app/login/login.component.html
@@ -3,9 +3,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 mx-auto">
-          <div class="card-group" style="background-color: white">
-            <div class="card p-4" style="background-color: #2c3333">
-              <div class="card-body" style="background-color: #2c3333">
+          <div class="card-group">
+            <div class="card p-4" style="background-color: white">
+              <div class="card-body" style="background-color: white">
                 <h2 style="text-align: center; color: #f76e11">
                   <strong>Mentbot</strong>
                 </h2>
@@ -69,7 +69,7 @@
                         class="btn btn-primary px-4 w-100"
                         style="background-color: #95cd41"
                      
-                      >
+                        [disabled]="!loginForm.valid" >
                         Login
                       </button>
                     </div>
