--- a/mentbotapp/src/app/patients/addappointment/addappointment.component.html
+++ b/mentbotapp/src/app/patients/addappointment/addappointment.component.html
@@ -38,7 +38,7 @@
               <label class="col-md-3 col-form-label" for="date-input">Date of Appointment</label>
               <div class="col-md-9">
                 <input class="form-control" id="date-input" type="date" name="date-input" placeholder="date">
-                <span class="help-block">Please enter a valid date</span>
+                <!-- <span class="help-block">Please enter a valid date</span> -->
               </div>
             </div>
             <!-- <div class="form-group row">
@@ -57,10 +57,10 @@
               <label class="col-md-3 col-form-label" for="select1">Select Speciality</label>
               <div class="col-md-9">
                 <select id="select1" name="select1" class="form-control">
-                  <option value="0">Please select</option>
-                  <option value="1">Option #1</option>
-                  <option value="2">Option #2</option>
-                  <option value="3">Option #3</option>
+                    <option value="0">Please select the speciality</option>
+                  <option value="1">Anxiety</option>
+                  <option value="2">Depression</option>
+                  <option value="3">Stress</option>
                 </select>
               </div>
             </div>
@@ -68,7 +68,7 @@
                 <label class="col-md-3 col-form-label" for="select1">Select Doctor</label>
                 <div class="col-md-9">
                   <select id="select1" name="select1" class="form-control">
-                    <option value="0">Please select</option>
+                    <option value="0">Please select the Doctor</option>
                     <option value="1">Option #1</option>
                     <option value="2">Option #2</option>
                     <option value="3">Option #3</option>
@@ -76,7 +76,7 @@
                 </div>
               </div>
 
-               <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Add Booking</button> -->
+               <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i>Get Available Slots</button> 
               
             <!-- <div class="form-group row">
               <label class="col-md-3 col-form-label" for="select2">Select Large</label>
@@ -129,7 +129,7 @@
               </div>
             </div> -->
             <div class="form-group row">
-              <label class="col-md-3 col-form-label" >Get Available Slots</label>
+              <label class="col-md-3 col-form-label" >Available Slots</label>
                <div class="col-md-9 col-form-label">
                 <div class="form-check">
                   <input class="form-check-input" type="radio" name="radios" id="radio1" value="option1" checked>
