UI : changes in ui for API calls and other fixes

--- a/mentbotapp/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/mentbotapp/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -26,7 +26,7 @@
                 <td>{{item.date}}</td>
                 <td>
                     <span> 
-                      <button type="update" (click)="updateUserDetails(item.patientName)" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Update</button>
+                      <button type="update" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Update</button>
                       <button type="delete" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Delete</button>
                     </span>
                   </td>
