--- a/mentbotapp/src/app/admin/usermanage/usermanage.component.html
+++ b/mentbotapp/src/app/admin/usermanage/usermanage.component.html
@@ -13,28 +13,24 @@
                 <th>Firstname</th>
                 <th>Lastname</th>
                 <th>Username</th>
-                <th>Password</th>
                 <th>Email</th>
                 <th>Phonenum</th>
                 <th>Address</th>
                 <th>Pincode</th>
-                <th>Role</th>
                 <th>Action</th>
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td>x</td>
-                <td>y</td>
-                <td>z</td>
-                <td>x</td>
-                <td>y</td>
-                <td>z</td>
-                <td>x</td>
-                <td>y</td>
-                <td>z</td>
+              <tr *ngFor="let item of userDetails">
+                <td>{{item.firstname}}</td>
+                <td>{{item.lastname}}</td>
+                <td>{{item.username}}</td>
+                <td>{{item.email}}</td>
+                <td>{{item.phonenum}}</td>
+                <td>{{item.addressline}}</td>
+                <td>{{item.pincode}}</td>
                 <td>
-                  <span><button type="update" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Update</button>
+                  <span><button type="update" class="btn btn-sm btn-primary" (click)="updateUserDetails(item.id)"><i class="fa fa-dot-circle-o"></i> Update</button>
                     <button type="delete" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Delete</button></span>
                 </td>
               </tr>
