--- a/mentbotapp/src/app/patients/addappointment/addappointment.component.html
+++ b/mentbotapp/src/app/patients/addappointment/addappointment.component.html
@@ -1,232 +1,59 @@
-
 <div class="row">
-    <div class="col-md-12">
-      <div class="card">
-        <div class="card-header">
-          <strong><em>Add My Appointment</em></strong> 
-        </div>
-        <div class="card-body">
-          <form action="" method="post" enctype="multipart/form-data" class="form-horizontal">
-            <div class="form-group row">
-              <!-- <label class="col-md-3 col-form-label">Static</label> -->
-              <!-- <div class="col-md-9">
-                <p class="form-control-static">Username</p>
-              </div> -->
-            </div>
-            <!-- <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="text-input">Text Input</label>
-              <div class="col-md-9">
-                <input type="text" id="text-input" name="text-input" class="form-control" placeholder="Text">
-                <span class="help-block">This is a help text</span>
-              </div>
-            </div> -->
-            <!-- <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="email-input">Email Input</label>
-              <div class="col-md-9">
-                <input type="email" id="email-input" name="email-input" class="form-control" placeholder="Enter Email" autocomplete="email">
-                <span class="help-block">Please enter your email</span>
-              </div>
-            </div> -->
-            <!-- <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="password-input">Password</label>
-              <div class="col-md-9">
-                <input type="password" id="password-input" name="password-input" class="form-control" placeholder="Password" autocomplete="current-password">
-                <span class="help-block">Please enter a complex password</span>
-              </div>
-            </div> -->
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="date-input">Date of Appointment</label>
-              <div class="col-md-9">
-                <input class="form-control" id="date-input" type="date" name="date-input" placeholder="date">
-                <!-- <span class="help-block">Please enter a valid date</span> -->
-              </div>
-            </div>
-            <!-- <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="disabled-input">Disabled Input</label>
-              <div class="col-md-9">
-                <input type="text" id="disabled-input" name="disabled-input" class="form-control" placeholder="Disabled" disabled>
-              </div>
-            </div> -->
-            <!-- <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="textarea-input">Textarea</label>
-              <div class="col-md-9">
-                <textarea id="textarea-input" name="textarea-input" rows="9" class="form-control" placeholder="Content.."></textarea>
-              </div>
-            </div> -->
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="select1">Select Speciality</label>
-              <div class="col-md-9">
-                <select id="select1" name="select1" class="form-control">
-                    <option value="0">Please select the speciality</option>
-                  <option value="1">Anxiety</option>
-                  <option value="2">Depression</option>
-                  <option value="3">Stress</option>
-                </select>
-              </div>
-            </div>
-            <div class="form-group row">
-                <label class="col-md-3 col-form-label" for="select1">Select Doctor</label>
-                <div class="col-md-9">
-                  <select id="select1" name="select1" class="form-control">
-                    <option value="0">Please select the Doctor</option>
-                    <option value="1">Option #1</option>
-                    <option value="2">Option #2</option>
-                    <option value="3">Option #3</option>
-                  </select>
-                </div>
-              </div>
-
-               <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i>Get Available Slots</button> 
-              
-            <!-- <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="select2">Select Large</label>
-              <div class="col-md-9">
-                <select id="select2" name="select2" class="form-control form-control-lg">
-                  <option value="0">Please select</option>
-                  <option value="1">Option #1</option>
-                  <option value="2">Option #2</option>
-                  <option value="3">Option #3</option>
-                </select>
-              </div>
-            </div> -->
-            <!-- <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="select3">Select Small</label>
-              <div class="col-md-9">
-                <select id="select3" name="select3" class="form-control form-control-sm">
-                  <option value="0">Please select</option>
-                  <option value="1">Option #1</option>
-                  <option value="2">Option #2</option>
-                  <option value="3">Option #3</option>
-                </select>
-              </div>
-            </div> -->
-            <!-- <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="disabledSelect">Disabled Select</label>
-              <div class="col-md-9">
-                <select id="disabledSelect" class="form-control" disabled>
-                  <option value="0">Please select</option>
-                  <option value="1">Option #1</option>
-                  <option value="2">Option #2</option>
-                  <option value="3">Option #3</option>
-                </select>
-              </div>
-            </div> -->
-            <!-- <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="multiple-select">Multiple select</label>
-              <div class="col-md-9">
-                <select id="multiple-select" name="multiple-select" class="form-control" size="5" multiple>
-                  <option value="1">Option #1</option>
-                  <option value="2">Option #2</option>
-                  <option value="3">Option #3</option>
-                  <option value="4">Option #4</option>
-                  <option value="5">Option #5</option>
-                  <option value="6">Option #6</option>
-                  <option value="7">Option #7</option>
-                  <option value="8">Option #8</option>
-                  <option value="9">Option #9</option>
-                  <option value="10">Option #10</option>
-                </select>
-              </div>
-            </div> -->
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label" >Available Slots</label>
-               <div class="col-md-9 col-form-label">
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="radios" id="radio1" value="option1" checked>
-                  <label class="form-check-label" for="radio1">
-                    Option 1
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="radios" id="radio2" value="option2">
-                  <label class="form-check-label" for="radio2">
-                    Option 2
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="radios" id="radio3" value="option3">
-                  <label class="form-check-label" for="radio3">
-                    Option 3
-                  </label>
-                </div>
-              </div>
-            </div> 
-            <!-- <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="inline-radios">Inline Radios</label>
-              <div class="col-md-9 col-form-label">
-                <div class="form-check form-check-inline mr-1" id="inline-radios">
-                  <input class="form-check-input" type="radio" name="inline-radios" id="inlineRadio1" value="option1">
-                  <label class="form-check-label" for="inlineRadio1">One</label>
-                </div>
-                <div class="form-check form-check-inline mr-1">
-                  <input class="form-check-input" type="radio" name="inline-radios" id="inlineRadio2" value="option2">
-                  <label class="form-check-label" for="inlineRadio2">Two</label>
-                </div>
-                <div class="form-check form-check-inline mr-1">
-                  <input class="form-check-input" type="radio" name="inline-radios" id="inlineRadio3" value="option3">
-                  <label class="form-check-label" for="inlineRadio3">Three</label>
-                </div>
-              </div>
-            </div> -->
-            <!-- <div class="form-group row">
-              <label class="col-md-3 col-form-label">Checkboxes</label>
-              <div class="col-md-9 col-form-label">
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" value="option1" id="checkbox1">
-                  <label class="form-check-label" for="checkbox1">
-                    Option 1
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" value="option1" id="checkbox2">
-                  <label class="form-check-label" for="checkbox2">
-                    Option 2
-                  </label>
-                </div>
-                <div class="form-check checkbox">
-                  <input class="form-check-input" type="checkbox" value="option1" id="checkbox3">
-                  <label class="form-check-label" for="checkbox3">
-                    Option 3
-                  </label>
-                </div>
-              </div>
-            </div> -->
-            <!-- <div class="form-group row">
-              <label class="col-md-3 col-form-label">Inline Checkboxes</label>
-              <div class="col-md-9 col-form-label">
-                <div class="form-check form-check-inline mr-1">
-                  <input class="form-check-input" type="checkbox" id="inline-checkbox1" value="option1">
-                  <label class="form-check-label" for="inline-checkbox1">One</label>
-                </div>
-                <div class="form-check form-check-inline mr-1">
-                  <input class="form-check-input" type="checkbox" id="inline-checkbox2" value="option2">
-                  <label class="form-check-label" for="inline-checkbox2">Two</label>
-                </div>
-                <div class="form-check form-check-inline mr-1">
-                  <input class="form-check-input" type="checkbox" id="inline-checkbox3" value="option3">
-                  <label class="form-check-label" for="inline-checkbox3">Three</label>
-                </div>
-              </div>
-            </div> -->
-            <!-- <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="file-input">File input</label>
-              <div class="col-md-9">
-                <input type="file" id="file-input" name="file-input">
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label" for="file-multiple-input">Multiple File input</label>
-              <div class="col-md-9">
-                <input type="file" id="file-multiple-input" name="file-multiple-input" multiple>
-              </div>
-            </div> -->
-          </form>
-        </div>
-        <div class="card-footer">
-          <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Add Appointment</button>
-          <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Cancel</button>
-        </div>
+  <div class="col-md-12">
+    <div class="card">
+      <div class="card-header">
+        <strong><em>Add My Appointment</em></strong>
       </div>
+      <div class="card-body">
+        <form name="form" role="form" (ngSubmit)="addAppointment()" [formGroup]="addAppointmentForm" method="post" enctype="multipart/form-data" class="form-horizontal">
+          <div class="form-group row">
+            <label class="col-md-3 col-form-label" for="date-input">Date of Appointment</label>
+            <div class="col-md-9">
+              <input class="form-control" formControlName="dateOfAppointment" id="date-input" type="date" name="date-input" placeholder="date">
+              <!-- <span class="help-block">Please enter a valid date</span> -->
+            </div>
+          </div>
+          <div class="form-group row">
+            <label class="col-md-3 col-form-label" for="select1">Select Speciality</label>
+            <div class="col-md-9">
+              <select id="select1" placeholder="Please select the speciality" formControlName="speciality" name="select1" class="form-control">
+                <option value="Anxiety">Anxiety</option>
+                <option value="Depression">Depression</option>
+                <option value="Stress">Stress</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label class="col-md-3 col-form-label" for="select1">Select Doctor</label>
+            <div class="col-md-9">
+              <select id="select1" placeholder="Please select the Doctor" formControlName="doctorName" name="select1" class="form-control">
+                <option value="1">Option #1</option>
+                <option value="2">Option #2</option>
+                <option value="3">Option #3</option>
+              </select>
+            </div>
+          </div>
+          <button type="button" (click)="getAvailableSlots()" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i>
+            Get Available Slots
+          </button>
+            <div class="form-group row" *ngIf="showAvailableSlots">
+              <label class="col-md-3 col-form-label" for="select1">Select Available Slot:</label>
+              <div class="col-md-9">
+                <select id="select1" placeholder="Please select the available slot" formControlName="slots" name="select1" class="form-control">
+                  <option value="1">Option #1</option>
+                  <option value="2">Option #2</option>
+                  <option value="3">Option #3</option>
+                </select>
+              </div>
+            </div>
+            <div class="mt-3 card-footer">
+              <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i>Add Appointment</button>
+              <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Cancel</button>
+            </div>
+        </form>
+      </div>
+      
     </div>
+  </div>
 
 </div>
