--- a/mentbotapp/src/app/patients/patientprofile/patientprofile.component.html
+++ b/mentbotapp/src/app/patients/patientprofile/patientprofile.component.html
@@ -7,49 +7,54 @@
         </div>
         <div class="card-body">
           <form action="" method="post" enctype="multipart/form-data" class="form-horizontal">
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label">Username:</label> 
-               <div class="col-md-9">
-                <p class="form-control-static">Username</p>
-              </div>
-            </div>
-            <div class="form-group row">
-                <label class="col-md-3 col-form-label">Email:</label> 
-                 <div class="col-md-9">
-                  <p class="form-control-static">Email</p>
-                </div>
-              </div>
+            <div *ngFor="let item of userDetails">
 
               <div class="form-group row">
-                <label class="col-md-3 col-form-label">Phone Number:</label> 
+                <label class="col-md-3 col-form-label">Username:</label> 
                  <div class="col-md-9">
-                  <p class="form-control-static">Phone Number</p>
+                  <p class="form-control-static">{{item.username}}</p>
                 </div>
               </div>
               <div class="form-group row">
-                <label class="col-md-3 col-form-label">Address:</label> 
-                 <div class="col-md-9">
-                  <p class="form-control-static">Address</p>
+                  <label class="col-md-3 col-form-label">Email:</label> 
+                   <div class="col-md-9">
+                    <p class="form-control-static">{{item.email}}</p>
+                  </div>
                 </div>
-              </div>
-              <div class="form-group row">
-                <label class="col-md-3 col-form-label">City:</label> 
-                 <div class="col-md-9">
-                  <p class="form-control-static">City</p>
+  
+                <div class="form-group row">
+                  <label class="col-md-3 col-form-label">Phone Number:</label> 
+                   <div class="col-md-9">
+                    <p class="form-control-static">{{item.phonenum}}</p>
+                  </div>
                 </div>
-              </div>
-              <div class="form-group row">
-                <label class="col-md-3 col-form-label">State:</label> 
-                 <div class="col-md-9">
-                  <p class="form-control-static">State</p>
+                <div class="form-group row">
+                  <label class="col-md-3 col-form-label">Address:</label> 
+                   <div class="col-md-9">
+                    <p class="form-control-static">{{item.addressline}}</p>
+                  </div>
                 </div>
-              </div>
-              <div class="form-group row">
-                <label class="col-md-3 col-form-label">Pincode:</label> 
-                 <div class="col-md-9">
-                  <p class="form-control-static">Pincode</p>
+                <div class="form-group row">
+                  <label class="col-md-3 col-form-label">City:</label> 
+                   <div class="col-md-9">
+                    <p class="form-control-static">{{item.city}}</p>
+                  </div>
                 </div>
-              </div>
+                <div class="form-group row">
+                  <label class="col-md-3 col-form-label">State:</label> 
+                   <div class="col-md-9">
+                    <p class="form-control-static">{{item.state}}</p>
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label class="col-md-3 col-form-label">Pincode:</label> 
+                   <div class="col-md-9">
+                    <p class="form-control-static">{{item.pincode}}</p>
+                  </div>
+                </div>
+
+            </div>
+            
             </form>
             
            
