intial commit of frntend

--- a/mentbotapp/src/app/doctors/addspeciality/addspeciality.component.html
+++ b/mentbotapp/src/app/doctors/addspeciality/addspeciality.component.html
@@ -78,9 +78,9 @@
               <label class="col-md-3 col-form-label" for="select3">Select Speciality</label>
               <div class="col-md-9">
                 <select id="select3" name="select3" class="form-control form-control-sm">
-                  <option value="0">Please select</option>
+                  <option>Please select</option>
                   <option value="1">Anxiety</option>
-                  <option value="2">Depression #2</option>
+                  <option value="2">Depression</option>
                   <option value="3">Stress</option>
                 </select>
               </div>
