--- a/mentbotapp/src/app/doctors/addspeciality/addspeciality.component.html
+++ b/mentbotapp/src/app/doctors/addspeciality/addspeciality.component.html
@@ -19,7 +19,7 @@
           </form>
         </div>
         <div class="card-footer">
-          <button type="submit" (click)="addSpeciality()" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Add Speciality</button>
+          <button type="submit"  class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Add Speciality</button>
           <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Cancel</button>
         </div>
       </div>
