--- a/mentbotapp/src/app/doctors/availabilitycheck/availabilitycheck.component.html
+++ b/mentbotapp/src/app/doctors/availabilitycheck/availabilitycheck.component.html
@@ -40,9 +40,9 @@
           <button type="Accept" (click)="addSchedule()" class="btn btn-sm btn-primary">
             <i class="fa fa-dot-circle-o"></i> Add Schedule
           </button>
-          <button type="Cancel" class="btn btn-sm btn-danger">
+          <!-- <button type="Cancel" class="btn btn-sm btn-danger">
             <i class="fa fa-ban"></i> Cancel
-          </button>
+          </button> -->
         </div>
         
         <!-- <table class="table table-sm">
