--- a/mentbotapp/src/app/patients/add-details/add-details.component.html
+++ b/mentbotapp/src/app/patients/add-details/add-details.component.html
@@ -9,7 +9,7 @@
           <div class="form-group row">
             <label class="col-md-3 col-form-label" for="text-input" >BloodGroup</label>
             <div class="col-md-9">
-              <input type="text" id="text-input" formControlName="bloodGroup" name="text-input" class="form-control" placeholder="BloodGroup">
+              <input type="text" id="text-input" formControlName="bloodgroup" name="text-input" class="form-control" placeholder="BloodGroup">
             </div>
           </div>
           <!-- <div *ngIf="addDetailsForm.get('bloodGroup')!.invalid && (addDetailsForm.get('bloodGroup')!.dirty || addDetailsForm.get('bloodGroup')!.touched)">
