--- a/mentbotapp/src/app/patients/addappointment/addappointment.component.html
+++ b/mentbotapp/src/app/patients/addappointment/addappointment.component.html
@@ -48,7 +48,7 @@
             </div>
             <div class="mt-3 card-footer">
               <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i>Add Appointment</button>
-              <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Cancel</button>
+              <!-- <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Cancel</button> -->
             </div>
         </form>
       </div>
