--- a/mentbotapp/src/app/patients/add-details/add-details.component.html
+++ b/mentbotapp/src/app/patients/add-details/add-details.component.html
@@ -40,7 +40,7 @@
           <div class="card-footer">
             <button type="submit" class="btn btn-sm btn-primary"><i
                 class="fa fa-dot-circle-o"></i>Add Details</button>
-            <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Cancel</button>
+            <!-- <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Cancel</button> -->
           </div>
         </form>
       </div>
