--- a/mentbotapp/src/app/patients/addappointment/addappointment.component.html
+++ b/mentbotapp/src/app/patients/addappointment/addappointment.component.html
@@ -16,20 +16,18 @@
           <div class="form-group row">
             <label class="col-md-3 col-form-label" for="select1">Select Speciality</label>
             <div class="col-md-9">
-              <select id="select1" placeholder="Please select the speciality" formControlName="speciality" name="select1" class="form-control">
-                <option value="Anxiety">Anxiety</option>
-                <option value="Depression">Depression</option>
-                <option value="Stress">Stress</option>
+              <select id="select1" placeholder="Please select the speciality" (change)="getDoctorDetails(item.value)" formControlName="speciality" name="select1" class="form-control">
+                <option #item [value]="1">Anxiety</option>
+                <option #item [value]="2">Depression</option>
+                <option #item [value]="3">Stress</option>
               </select>
             </div>
           </div>
-          <div class="form-group row">
+          <div class="form-group row" *ngIf="isSpecialitySelected">
             <label class="col-md-3 col-form-label" for="select1">Select Doctor</label>
             <div class="col-md-9">
-              <select id="select1" placeholder="Please select the Doctor" formControlName="doctorName" name="select1" class="form-control">
-                <option value="1">Option #1</option>
-                <option value="2">Option #2</option>
-                <option value="3">Option #3</option>
+              <select id="select1" placeholder="Please select the Doctor"  formControlName="doctorName" name="select1" class="form-control">
+                <option value="{{item.doctorName}}" *ngFor="let item of doctorNames">{{item.doctorName}}</option>
               </select>
             </div>
           </div>
@@ -40,9 +38,7 @@
               <label class="col-md-3 col-form-label" for="select1">Select Available Slot:</label>
               <div class="col-md-9">
                 <select id="select1" placeholder="Please select the available slot" formControlName="slots" name="select1" class="form-control">
-                  <option value="1">Option #1</option>
-                  <option value="2">Option #2</option>
-                  <option value="3">Option #3</option>
+                  <option *ngFor="let item of availableSlots">{{item}}</option>
                 </select>
               </div>
             </div>
