--- a/mentbotapp/src/app/doctors/doctors-dashboard/doctors-dashboard.component.html
+++ b/mentbotapp/src/app/doctors/doctors-dashboard/doctors-dashboard.component.html
@@ -25,10 +25,10 @@
                 <td>{{item.endtime}}</td>
                 <td>
                   <span>
-                    <button type="Accept" (click)="acceptAppointment(item.id)" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i>Accept</button>
+                    <button type="Accept" (click)="acceptAppointment(item.appointmentId)" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i>Accept</button>
                   </span>
                   <span>
-                    <button type="Cancel" (click)="cancelAppointment(item.id)" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Cancel</button>
+                    <button type="Cancel" (click)="cancelAppointment(item.appointmentId)" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Cancel</button>
                   </span>
                 </td>
               </tr>
