--- a/mentbotapp/src/app/patients/patients-dashboard/patients-dashboard.component.html
+++ b/mentbotapp/src/app/patients/patients-dashboard/patients-dashboard.component.html
@@ -13,7 +13,8 @@
                 <th>Doctor Name</th>
                 <th>Date </th>
                 <th>Speciality</th>
-                <th>Slot</th>
+                <th>Start Time</th>
+                <th>End Time</th>
                 <th>Status</th>
               </tr>
             </thead>
@@ -22,7 +23,8 @@
                 <td>{{item.doctorName}}</td>
                 <td>{{item.appointmentDate}}</td>
                 <td>{{item.speciality}}</td>
-                <td>{{item.slot}}</td>
+                <td>{{item.startTime}}</td>
+                <td>{{item.endTime}}</td>
                 <td>{{item.status}}</td>
               </tr>  
             </tbody>
