changes in frontend

--- a/mentbotapp/src/app/patients/addappointment/addappointment.component.html
+++ b/mentbotapp/src/app/patients/addappointment/addappointment.component.html
@@ -16,10 +16,10 @@
           <div class="form-group row">
             <label class="col-md-3 col-form-label" for="select1">Select Speciality</label>
             <div class="col-md-9">
-              <select id="select1" placeholder="Please select the speciality" (change)="getDoctorDetails(item.value)" formControlName="speciality" name="select1" class="form-control">
-                <option #item value="1">Anxiety</option>
-                <option #item value="2">Depression</option>
-                <option #item value="3">Stress</option>
+              <select id="select1" placeholder="Please select the speciality" (change)="getDoctorDetails()" formControlName="speciality" name="select1" class="form-control">
+                <option  value="1">Anxiety</option>
+                <option value="2">Depression</option>
+                <option value="3">Stress</option>
               </select>
             </div>
           </div>
